@@ -1,0 +1,161 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "NewsArticle", "headline": "BLACKPINK\u6210\u54e1Rose\u5275\u9020\u6b77\u53f2\uff01\u8207\u706b\u661f\u4eba\u5e03\u9b6f\u8afe\u5408\u4f5c\u55ae\u66f2\u300cAPT.\u300d\u767b\u4e0a\u82f1\u570b\u5b98\u65b9\u699c\u55ae\u7b2c2\u540d", "description": "BLACKPINK\u6210\u54e1Rose\u5275\u9020\u6b77\u53f2\uff01\u8207\u706b\u661f\u4eba\u5e03\u9b6f\u8afe\u5408\u4f5c\u55ae\u66f2\u300cAPT.\u300d\u767b\u4e0a\u82f1\u570b\u5b98\u65b9\u699c\u55ae\u7b2c2\u540d", "url": "https://www.famechos.me/news/BLACKPINK\u6210\u54e1Rose\u5275\u9020\u6b77\u53f2\uff01\u8207\u706b\u661f\u4eba\u5e03\u9b6f\u8afe\u5408\u4f5c\u55ae\u66f2\u300cAPT.\u300d\u767b\u4e0a\u82f1\u570b\u5b98\u65b9\u699c\u55ae\u7b2c2\u540d.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-11-02T13:44:50.926468+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/BLACKPINK成員Rose創造歷史！與火星人布魯諾合作單曲「APT.」登上英國官方榜單第2名.html"/>
+<meta name="description" content="BLACKPINK成員Rose創造歷史！與火星人布魯諾合作單曲「APT.」登上英國官方榜單第2名，成就韓國女團在英國音樂榜單的新里程碑。">
+
+<meta name="keywords" content="BLACKPINK, Rose, 火星人布魯諾, APT., 英國官方榜單, 韓國女團, KPOP">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/BLACKPINK成員Rose創造歷史！與火星人布魯諾合作單曲「APT.」登上英國官方榜單第2名.html" />
+        <meta property="og:title" content="BLACKPINK成員Rose創造歷史！與火星人布魯諾合作單曲「APT.」登上英國官方榜單第2名" />
+        <meta property="og:description" content="BLACKPINK成員Rose創造歷史！與火星人布魯諾合作單曲「APT.」登上英國官方榜單第2名" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="BLACKPINK成員Rose創造歷史！與火星人布魯諾合作單曲「APT.」登上英國官方榜單第2名" />
+        <meta property="twitter:description" content="BLACKPINK成員Rose創造歷史！與火星人布魯諾合作單曲「APT.」登上英國官方榜單第2名" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Famechos"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        <link rel="icon" type="image/x-icon" href="https://www.famechos.me/img/famechos-icon.jpeg">
+        <link rel="shortcut icon" type="image/x-icon" href="https://www.famechos.me/img/famechos-icon.jpeg">
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3046601377771213"
+     crossorigin="anonymous"></script>
+     
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>BLACKPINK成員Rose創造歷史！與火星人布魯諾合作單曲「APT.」登上英國官方榜單第2名</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">02/11/2024</p>
+        </div>
+<p><p>BLACKPINK成員Rose與美國流行歌手火星人布魯</p>
