@@ -160,3 +160,4 @@ https://koreatimes.co.kr/www/nation/2024/11/690_385483.html?utm_source=fl
 https://koreatimes.co.kr/www/nation/2024/11/688_385383.html?utm_source=fl
 https://en.yna.co.kr/view/AEN20241102000551315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241102000551315?section=culture/k-pop&input=rss
+https://www.koreaherald.com/view.php?ud=20241102050068
